fixing fullscreen videon on mobile devices

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -40,7 +40,7 @@ video, .full-width{
 .fullscreen{
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: fixed;
 	right: 0;
 	top: 0;
 	z-index: 2;
